@@ -1,0 +1,136 @@
+<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
+<!DOCTYPE glade-interface SYSTEM "http://gazpacho.sicem.biz/gazpacho-0.1.dtd">
+<glade-interface>
+    <widget class="GtkSizeGroup" id="sizegroup1">
+        <property name="mode">horizontal</property>
+    </widget>
+    <widget class="GtkWindow" id="shell">
+        <property name="default_height">300</property>
+        <property name="default_width">550</property>
+        <property name="title" context="yes" translatable="yes">Sizegroup example</property>
+        <child>
+            <widget class="GtkVBox" id="vbox1">
+                <property name="visible">True</property>
+                <child>
+                    <widget class="GtkHBox" id="hbox1">
+                        <property name="visible">True</property>
+                        <child>
+                            <widget class="GtkLabel" id="label1">
+                                <property name="justify">center</property>
+                                <property name="label" context="yes" translatable="yes">Full name</property>
+                                <property name="sizegroup">sizegroup1</property>
+                                <property name="visible">True</property>
+                            </widget>
+                            <packing>
+                                <property name="expand">False</property>
+                                <property name="padding">10</property>
+                            </packing>
+                        </child>
+                        <child>
+                            <widget class="GtkEntry" id="entry1">
+                                <property name="is_focus">True</property>
+                                <property name="visible">True</property>
+                            </widget>
+                            <packing>
+                                <property name="position">1</property>
+                            </packing>
+                        </child>
+                    </widget>
+                    <packing>
+                        <property name="expand">False</property>
+                    </packing>
+                </child>
+                <child>
+                    <widget class="GtkHBox" id="hbox2">
+                        <property name="visible">True</property>
+                        <child>
+                            <widget class="GtkLabel" id="label2">
+                                <property name="justify">center</property>
+                                <property name="label" context="yes" translatable="yes">Age</property>
+                                <property name="sizegroup">sizegroup1</property>
+                                <property name="visible">True</property>
+                            </widget>
+                            <packing>
+                                <property name="expand">False</property>
+                                <property name="padding">10</property>
+                            </packing>
+                        </child>
+                        <child>
+                            <widget class="GtkEntry" id="entry2">
+                                <property name="visible">True</property>
+                            </widget>
+                            <packing>
+                                <property name="position">1</property>
+                            </packing>
+                        </child>
+                    </widget>
+                    <packing>
+                        <property name="expand">False</property>
+                        <property name="position">1</property>
+                    </packing>
+                </child>
+                <child>
+                    <widget class="GtkHSeparator" id="hseparator1">
+                        <property name="visible">True</property>
+                    </widget>
+                    <packing>
+                        <property name="expand">False</property>
+                        <property name="position">2</property>
+                    </packing>
+                </child>
+                <child>
+                    <widget class="GtkEventBox" id="placeholder">
+                        <property name="visible">True</property>
+                        <child>
+                            <widget class="GtkLabel" id="labelX">
+                                <property name="justify">center</property>
+                                <property name="label" context="yes" translatable="yes">Slave comes here
+(this widget is called "placeholder"
+and is packed inside a GtkEventBox)</property>
+                                <property name="visible">True</property>
+                            </widget>
+                        </child>
+                    </widget>
+                    <packing>
+                        <property name="position">3</property>
+                    </packing>
+                </child>
+                <child>
+                    <widget class="GtkHSeparator" id="hseparator2">
+                        <property name="visible">True</property>
+                    </widget>
+                    <packing>
+                        <property name="expand">False</property>
+                        <property name="position">4</property>
+                    </packing>
+                </child>
+                <child>
+                    <widget class="GtkEventBox" id="footer">
+                        <property name="visible">True</property>
+                        <child>
+                            <widget class="GtkHButtonBox" id="hbuttonbox1">
+                                <property name="border_width">5</property>
+                                <property name="layout_style">end</property>
+                                <property name="spacing">5</property>
+                                <property name="visible">True</property>
+                                <child>
+                                    <widget class="GtkButton" id="ok">
+                                        <property name="can_default">True</property>
+                                        <property name="has_default">True</property>
+                                        <property name="label" context="yes" translatable="yes">OK</property>
+                                        <property name="visible">True</property>
+                                    </widget>
+                                </child>
+                            </widget>
+                        </child>
+                    </widget>
+                    <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">5</property>
+                    </packing>
+                </child>
+            </widget>
+        </child>
+    </widget>
+</glade-interface>
